--- a/index.html
+++ b/index.html
@@ -5,12 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Follow us on Wechat</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <h1>Scan QR Code to follow us on Wechat<h1>
     <img src="LabC_QR_Code.jpg" alt="" srcset="">
 </body>
 
