--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Follow us on Wechat</title>
+    <title>Wechat QR Code</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+    <h2>Scan to follow us on wechat<h2>
     <img src="LabC_QR_Code.jpg" alt="" srcset="">
 </body>
 
